Add initial grid

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Title Here</title>
+    <title>Word Man Spelling</title>
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1>Title Here on page</h1>
+    <h1>Word Man Spelling</h1>
+    <div class="grid"></div>
+    <h3>Score:<span id="score">0</span></h3>
     <script src="app.js"></script>
   </body>
 </html>
