I added content above the game window, for game name and display content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <h1>Word Man Spelling</h1>
+  <h1 id="game_name">Word Chomp</h1>
+  <h2>Spell the world <span id="current_word">THAT</span></h2>
+  <div id="display-word"></div>
   <div class="grid"></div>
   <h3>Score:<span id="score">0</span></h3>
   <script src="app.js"></script>
