Changing the use of overflow-x so it doesnt respond on arrows we're about to use in our game

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1 id="game_name">Word Chomp</h1>
-  <h2>Spell the world <span id="current_word">THAT</span></h2>
+  <h2>Spell the word</h2>
   <div id="display-word"></div>
   <div class="grid"></div>
   <h3>Score:<span id="score">0</span></h3>
