--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-  <audio src="music/music_zapsplat_game_music_action_uplifting_electro_house_anthem_retro_melody_026.mp3" autoplay
-    controls></audio>
+  <audio id="audioplayer"
+    src="music/music_zapsplat_game_music_action_uplifting_electro_house_anthem_retro_melody_026.mp3" type="audio/mpeg"
+    loop="loop"></audio>
   <h1 id="game_name">Word Chomp</h1>
   <h2>Spell the word</h2>
   <div id="display-word"></div>
