--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Word Man Spelling</title>
+    <link rel="shortcut icon" href="#" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Word Man Spelling</title>
-  <link rel="shortcut icon" href="#" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-  <audio id="audioplayer"
-    src="music/music_zapsplat_game_music_action_uplifting_electro_house_anthem_retro_melody_026.mp3" type="audio/mpeg"
-    loop="loop"></audio>
-  <h1 id="game_name">Word Chomp</h1>
-  <h2>Spell the word</h2>
-  <div id="display-word"></div>
-  <div class="grid"></div>
-  <h3>Score:<span id="score">0</span></h3>
-  <script src="app.js"></script>
-</body>
-
+  <body>
+    <audio
+      id="audioplayer"
+      src="music/music_zapsplat_game_music_action_uplifting_electro_house_anthem_retro_melody_026.mp3"
+      type="audio/mpeg"
+      loop="loop"
+    ></audio>
+    <h1 id="game_name">Word Chomp</h1>
+    <h2>Spell the word</h2>
+    <div id="display-word"></div>
+    <div class="grid"></div>
+    <h3>Score:<span id="score">0</span></h3>
+    <script src="app.js" type="module"></script>
+    <script src="boards.js" type="module"></script>
+  </body>
 </html>
