Add transiition between levels with a button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <h2>Spell the word</h2>
     <div id="display-word"></div>
     <div class="grid"></div>
+    <p id="level">Level 1</p>
     <h3>Score:<span id="score">0</span></h3>
+    <button id="play-button">Play</button>
     <script src="app.js" type="module"></script>
     <script src="boards.js" type="module"></script>
   </body>
