--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="display-word"></div>
     <div class="grid"></div>
     <p id="level">Level 1</p>
+    <p>Lives <span id='lives'>3</span></p>
     <h3>Score:<span id="score">0</span></h3>
     <button id="play-button">Play</button>
     <script src="app.js" type="module"></script>
