--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
       loop="loop"
     ></audio>
     <h1 id="game_name">Word Chomp</h1>
-    <h2>Spell the word</h2>
+    <h2>Spell the word <span id='full-word'></span></h2>
     <div id="display-word"></div>
     <div class="grid"></div>
     <p id="level">Level 1</p>
-    <p>Lives <span id='lives'>3</span></p>
+    <p>Lives <span id="lives">3</span></p>
     <h3>Score:<span id="score">0</span></h3>
     <button id="play-button">Play</button>
     <script src="app.js" type="module"></script>
     <script src="boards.js" type="module"></script>
+    <script src="words.js" type="module"></script>
   </body>
 </html>
