Add music toggle

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
         <p>Lives <span id="lives">3</span></p>
       </div>
       <div class="grid"></div>
-      <h3>Score:<span id="score">0</span></h3>
+      <div id="container1">
+        <div class="spacing"></div>
+        <h3>Score:<span id="score">0</span></h3>
+        <div class="spacing">
+          <div>music</div>
+          <button id="music-toggle-container">
+            <div id="cross-out-line" class="hidden"></div>
+          </button>
+        </div>
+      </div>
       <button id="play-button">Play</button>
     </main>
     <script src="app.js" type="module"></script>
