Fix level number showing on screen

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
       <h2>Spell the word <span id="full-word"></span></h2>
       <div id="display-word"></div>
       <div id="level-lives-container">
-        <p id="level">Level 1</p>
+        <p>Level <span id="level-number">1</span></p>
         <p>Lives <span id="lives">3</span></p>
       </div>
-      <div class="grid"></div>
+      <div id="grid-container">
+        <div class="grid"></div>
+        <div id="appearing-message"></div>
+      </div>
       <div id="container1">
         <div class="spacing"></div>
         <h3>Score:<span id="score">0</span></h3>
