Add directions to use arrow keys to move

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="appearing-message"></div>
       </div>
       <div id="container1">
-        <div class="spacing"></div>
+        <div class="spacing" id="directions">Use arrow keys to move</div>
         <h3>Score:<span id="score">0</span></h3>
         <div class="spacing">
           <div>music</div>
