--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div id="grid-container">
         <div class="grid"></div>
-        <div id="appearing-message"></div>
+        <div class="appearing-message"></div>
       </div>
       <div id="container1">
         <div class="spacing" id="directions">Use arrow keys to move</div>
